change title in english

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container" id="root">
-        <h1>Videogiochi della settimana</h1>
+        <h1>Weekly Games</h1>
         <div class="gallery">
             <i class="fa-solid fa-caret-left" id="pre" @click="goPrev"></i>
             <div id="carousel">
